Restructures the plugin and starts work on cleaning and commenting the code

--- a/src/main/resources/lang/nl.txt
+++ b/src/main/resources/lang/nl.txt
@@ -16,7 +16,7 @@ createMsg=Gate gemaakt
 createNetDeny=Je hebt geen toegang tot dat netwerk.
 createGateDeny=Je mag die Gate-Layout niet gebruiken
 createPersonal=Gate op persoonlijk netwerk gemaakt.
-createNameLength=Naam te lang of te kort.
+createNameLength=Naam te chosenLanguage of te kort.
 createExists=Er bestaat al een gate met die naam
 createFull=Dit netwerk is vol.
 createWorldDeny=Je mag niet in die wereld komen.
