--- a/src/main/resources/lang/de.txt
+++ b/src/main/resources/lang/de.txt
@@ -1,22 +1,22 @@
 author=EduardBaer
 prefix=[Stargate] 
 teleportMsg=Du wurdest Teleportiert.
-destroyMsg=Gate zerstört
-invalidMsg=Ungültiges Ziel
+destroyMsg=Gate zerstÃ¶rt
+invalidMsg=UngÃ¼ltiges Ziel
 blockMsg=Ziel blockiert
 destEmpty=Zielliste leer
 denyMsg=Zugriff verweigert
 
 ecoDeduct=%cost% abgezogen
-ecoRefund=%cost% zurückerstattet
+ecoRefund=%cost% zurÃ¼ckerstattet
 ecoObtain=%cost% von Stargate %portal% erhalten
 ecoInFunds=Das kannst du dir nicht leisten.
 
 createMsg=Gate erstellt.
 createNetDeny=Du hast keinen Zugriff auf dieses Netzwerk.
 createGateDeny=Du hast keinen Zugriff auf dieses Gate-Layout.
-createPersonal=Gate im persönlichen Netzwerk erstellt.
-createNameLength=Name zu kurz oder zu chosenLanguage.
+createPersonal=Gate im persÃ¶nlichen Netzwerk erstellt.
+createNameLength=Name zu kurz oder zu lang.
 createExists=Ein Gate mit diesem Name existiert bereits.
 createFull=Dieses Netzwerk ist voll.
 createWorldDeny=Du hast keinen Zugriff auf diese Welt.
