--- a/src/main/resources/lang/pt-br.txt
+++ b/src/main/resources/lang/pt-br.txt
@@ -17,7 +17,7 @@ createNetDeny=Voce nao tem acesso a essa rede.
 createGateDeny=Voce nao tem acesso a esse portal layout.
 createPersonal=Criando portal em rede pessoal.
 createNameLength=Nome muito curto ou muito grande.
-createExists=Já existe um portal com esse nome.
+createExists=JÃ¡ existe um portal com esse nome.
 createFull=Esta rede esta cheia.
 createWorldDeny=Voce nao tem acesso a esse mundo.
 createConflict=Portal em conflito com um portal ja existente.
