--- a/src/main/resources/lang/en.txt
+++ b/src/main/resources/lang/en.txt
@@ -10,6 +10,8 @@ ecoDeduct=Deducted %cost%
 ecoRefund=Refunded %cost%
 ecoObtain=Obtained %cost% from Stargate %portal%
 ecoInFunds=Insufficient Funds
+ecoLoadError=Economy is enabled but vault could not be loaded. Economy disabled
+vaultLoaded=Vault v%version% found
 
 createMsg=Gate Created
 createNetDeny=You do not have access to that network
