Improves sign drawing during portal loading
Adds "Invalid gate" to the last line of portals with an invalid or unloaded gate type
Re-draws all portals' signs on load in case some invalid portals becomes valid. This also updates any formatting

--- a/src/main/resources/lang/en.txt
+++ b/src/main/resources/lang/en.txt
@@ -28,6 +28,7 @@ signRightClick=Right click
 signToUse=to use gate
 signRandom=Random
 signDisconnected=Disconnected
+signInvalidGate=Invalid gate
 
 bungeeDisabled=BungeeCord support is disabled.
 bungeeDeny=You do not have permission to create BungeeCord gates.
