Cleans up message logging quite a bit
Adds methods to Stargate for easier logging and less redundancy
Loads the language loader in two parts to make it available while loading
Adds a translated string to the reload-message
Uses String.format to make long messages more readable
Makes it possible to get strings directly from the backup language to make debugging easier

--- a/src/main/resources/lang/en.txt
+++ b/src/main/resources/lang/en.txt
@@ -5,6 +5,7 @@ invalidMsg=Invalid Destination
 blockMsg=Destination Blocked
 destEmpty=Destination List Empty
 denyMsg=Access Denied
+reloaded=Stargate Reloaded
 
 ecoDeduct=Deducted %cost%
 ecoRefund=Refunded %cost%
