Fixes some portal closing bugs, a NullPointerException and a typo
Fixes a typo in nn-no
Fixes a bug causing always-on portals not to be closed properly
Fixes a possible NullPointerException in onEntityPortalEnter
Waits for block change request on reload which makes it possible to change the open-material with just a reload

--- a/src/main/resources/lang/nn-no.txt
+++ b/src/main/resources/lang/nn-no.txt
@@ -34,4 +34,4 @@ signDisconnected=Kopla frå
 bungeeDisabled=BungeeCord støtte er slått av.
 bungeeDeny=Du har ikkje løyve til å opprette BungeeCord portar.
 bungeeEmpty=BungeeCord portar treng bade ein destinasjon og eit nettverk.
-bungeeSign=Teleportar til
+bungeeSign=Teleporter til
