--- a/src/main/resources/lang/nb-no.txt
+++ b/src/main/resources/lang/nb-no.txt
@@ -35,3 +35,9 @@ bungeeDisabled=BungeeCord støtte er slått av.
 bungeeDeny=Du har ikke tillatelse til å opprette BungeeCord porter.
 bungeeEmpty=BungeeCord porter behøver bade en destinasjon og et nettverk.
 bungeeSign=Teleporter til
+
+portalInfoTitle=[STJERNEPORT INFO]
+portalInfoName=Navn: %name%
+portalInfoDestination=Destinasjon: %destination%
+portalInfoNetwork=Nettverk: %network%
+portalInfoServer=Server: %server%
