--- a/src/main/resources/lang/en.txt
+++ b/src/main/resources/lang/en.txt
@@ -1,32 +1,58 @@
+# General Styling
 prefix=[Stargate] 
-teleportMsg=Teleported
-destroyMsg=Gate Destroyed
-invalidMsg=Invalid Destination
-blockMsg=Destination Blocked
-destEmpty=Destination List Empty
-denyMsg=Access Denied
 
-ecoDeduct=Deducted %cost%
-ecoRefund=Refunded %cost%
-ecoObtain=Obtained %cost% from Stargate %portal%
-ecoInFunds=Insufficient Funds
-
-createMsg=Gate Created
-createNetDeny=You do not have access to that network
-createGateDeny=You do not have access to that gate layout
-createPersonal=Creating gate on personal network
-createNameLength=Name too short or too long.
-createExists=A gate by that name already exists
-createFull=This network is full
-createWorldDeny=You do not have access to the %world% world
-createConflict=Gate conflicts with existing gate
-
-signRightClick=Right click
-signToUse=to use gate
+# Sign Formatting
+signLegacyBungee=Teleport to
+signNonFixedL2=Right click
+signNonFixedL3=to use gate
 signRandom=Random
 signDisconnected=Disconnected
+signTerminalL2=For Sale
 
-bungeeDisabled=BungeeCord support is disabled.
-bungeeDeny=You do not have permission to create BungeeCord gates.
-bungeeEmpty=BungeeCord gates require both a destination and network.
-bungeeSign=Teleport to
+# Gate Actions
+gateDestroy=Gate destroyed!
+gateCreateSpecified=Gate created on %network% network!
+gateCreatePersonal=Creating gate on personal network.
+gateTerminalSold=Purchased gate %gateName% in %terminalName% for %cost%.
+gateTerminalSale=Listed gate %gateName% for sale in %terminalName% for %cost%.
+
+# Gate Construction Problems
+faultNetwork=You do not have access to that network!
+faultLayout=You do not have access to that gate layout!
+faultLength=Name too short or too long!
+faultExists=A gate by that name already exists!
+faultFull=There is no space on that network!
+faultWorldDeny=You do not have access to that world.
+faultConflict=This gate conflicts with an existing gate.
+faultFlag=You do not have permission to make %flag% gates.
+
+# Bungee Problems
+bungeeDisabled=Bungeecord support is not enabled.
+bungeeLocal=Modern bungee gates are not enabled.
+bungeeLegacySyntax=Legacy bungee gates require you to specify a destination gate and server.
+bungeeInvalidExit=This portal's %target% was removed from the destination sever.
+bungeeExitType1=network
+bungeeExitType2=gate
+bungeeProxyOffline=This portal exits on a server that is currently unavailable.
+bungeeTargetOffline=The proxy is currently down; bungee portals are temporarily disabled.
+
+# Gate Usage
+tpSuccess=Teleported!
+tpDestiInvalid=Invalid destination!
+tpDestiBlocked=Destination obstructed!
+tpEmptyNet=Destination list empty!
+
+# Access
+conflictPerms=Access denied!
+conflictSpawn=Spawn chunks are interfering with this portal!
+
+# Economy
+ecoDeduct=Deducted %cost%.
+ecoRefund=Refunded %cost%!
+ecoObtain=Obtained %cost% from StarGate %portal%!
+ecoInsolvent=Insufficient Funds!
+
+#Admin
+adminReload=Configuration reloated!
+adminInfo=Running version %version%. Changelog: https://git.io/JD4Qo
+adminHelp=Stargate's documentation can be found at https://git.io/JDclf
