Added all the crowding messages

--- a/src/main/resources/lang/prompts_default.properties
+++ b/src/main/resources/lang/prompts_default.properties
@@ -2,7 +2,7 @@
 prefix=[Stargate] 
 
 # Sign Formatting
-signLegacyBungee=Teleport to
+signLegacyBungee=Legacy Bungee
 signNonFixedL2=Right click
 signNonFixedL3=to use gate
 signRandom=Random
@@ -24,7 +24,7 @@ faultExists=A gate by that name already exists\!
 faultFull=There is no space on that network\!
 faultWorldDeny=You do not have access to world %world%!
 faultConflict=This gate conflicts with an existing gate.
-faultFlag=You do not have permission to make %flag% gates.
+faultFlag=You lack permission to use the %flags% flags; your portal has been created without them!
 
 # Bungee Problems
 bungeePerms=You do not have permission to make bungee gates!
