--- a/src/main/resources/lang/nl/nl-NL.txt
+++ b/src/main/resources/lang/nl/nl-NL.txt
@@ -1,17 +1,58 @@
 # General Styling
+prefix=[Stargate] 
 
 # Sign Formatting
+signLegacyBungee=Verouderde Bungee
+signNonFixedL2=Rechter muis click
+signNonFixedL3=Poort gebruiken
+signRandom=Willekeurig
+signDisconnected=Verbinding verbroken
+signTerminalL2=Te Koop
 
 # Gate Actions
+gateDestroy=Poort vernietigd!
+gateCreateSpecified=Poort gemaakt op %network% netwerk!
+gateCreatePersonal=Poort aanmaken op een persoonlijk netwerk.
+gateTerminalSold=Gate %gateName% gekocht in %terminalName% voor %cost%.
+gateTerminalSale=Gate %gateName% te koop aangeboden in %terminalName% voor %cost%.
 
 # Gate Construction Problems
+faultNetwork=Je hebt geen toegang tot dat netwerk!
+faultLayout=U heeft geen toegang tot deze poort lay-out!
+faultLength=Naam te kort of te lang!
+faultExists=Er bestaat al een poort met die naam!
+faultFull=Er is geen ruimte op dat netwerk!
+faultWorldDeny=Je hebt geen toegang tot wereld %world%!
+faultConflict=Deze poort conflicteert met een bestaande poort.
+faultFlag=Je hebt geen toestemming om de %flags% markering te gebruiken; je portaal is aangemaakt zonder deze markering.
 
 # Bungee Problems
+bungeePerms=Je hebt geen toestemming om bungee poorten te maken!
+bungeeDisabled=Bungeecord ondersteuning is niet ingeschakeld.
+bungeeLocal=Moderne bungee-poorten zijn niet ingeschakeld.
+bungeeLegacySyntax=de verouderde Bungee gates vereisen dat je een specifieke bestemming naar poort en server opgeeft
+bungeeInvalidExitNetwork=Het netwerk van dit portaal bestaat niet meer op de aangegeven doel server.
+bungeeInvalidExitGate=De uitgang van dit portaal bestaat niet meer op de aangegeven server.
+bungeeProxyOffline=De uitgang van dit portaal is op een server dat momentaal niet beschikbaar is.
+bungeeTargetOffline=De proxy is momenteel niet beschikbaar; bungee-portalen zijn tijdelijk uitgeschakeld.
 
 # Gate Usage
+tpSuccess=Geteleporteerd!
+tpDestiInvalid=Ongeldige bestemming
+tpDestiBlocked=Bestemming geblokkeerd!
+tpEmptyNet=Bestemming lijst is leeg!
 
 # Access
+conflictPerms=Toegang geweigerd
+conflictSpawn=Het spawngebied verstoort dit portaal!
 
 # Economy
+ecoDeduct=%cost% afgetrokken
+ecoObtain=%cost% ontvangen van StarGate %portal%!
+ecoInsolvent=Onvoldoende saldo!
 
 #Admin
+adminReload=Configuratie herladen!
+adminInfo=Uitvoeren van versie %version%. Changelog: https://git.io/JD4Qo
+adminHelp=De documentatie van StarGate kan gevonden worden op https://git.io/JDclf
+translatedBy=Matriarch!
