Fixed some invalid player messages

--- a/src/main/resources/lang/en-CA/en-CA.txt
+++ b/src/main/resources/lang/en-CA/en-CA.txt
@@ -40,7 +40,7 @@ bungeeTargetOffline=The proxy is currently down; bungee portals are temporarily 
 tpSuccess=Teleported!
 tpDestiInvalid=Invalid destination!
 tpDestiBlocked=Destination obstructed!
-tpEmptyNet=Access denied!
+tpEmptyNet=Destination list empty!
 
 # Access
 conflictPerms=Access denied!
