--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -38,8 +38,8 @@ bungeeTargetOffline=TEH PROXY IZ CURRENTLY GONE; BUNGEE PORTALS R TEMPORARILY DI
 
 # Gate Usage
 tpSuccess=POOFD!
-tpDestiInvalid=BAD DESTINASHUN!
-tpDestiBlocked=DESTINASHUN OBSTRUCTD!
+tpDestInvalid=BAD DESTINASHUN!
+tpDestBlocked=DESTINASHUN OBSTRUCTD!
 tpEmptyNet=DESTINASHUN LIST EMPTY!
 
 # Access
