--- a/src/main/resources/lang/nb/nb-NO.txt
+++ b/src/main/resources/lang/nb/nb-NO.txt
@@ -38,8 +38,8 @@ bungeeTargetOffline=Mellomtjener-serveren er nede akkurat nå; bungee portaler e
 
 # Gate Usage
 tpSuccess=Teleporterte!
-tpDestiInvalid=Ugyldig destinasjon!
-tpDestiBlocked=Destinasjonen er blokkert!
+tpDestInvalid=Ugyldig destinasjon!
+tpDestBlocked=Destinasjonen er blokkert!
 tpEmptyNet=Det fins ingen tilgjengelige destinasjoner!
 
 # Access
