--- a/src/main/resources/lang/de/de-DE.txt
+++ b/src/main/resources/lang/de/de-DE.txt
@@ -38,8 +38,8 @@ bungeeTargetOffline=Der Proxy ist momentan nicht verfügbar; Bungee-Portale sind
 
 # Gate Usage
 tpSuccess=Teleportiert!
-tpDestiInvalid=Ungültiger Ziel!
-tpDestiBlocked=Ziel ist blockiert
+tpDestInvalid=Ungültiger Ziel!
+tpDestBlocked=Ziel ist blockiert
 tpEmptyNet=Zielliste ist leer!
 
 # Access
