--- a/src/main/resources/lang/fr/fr-FR.txt
+++ b/src/main/resources/lang/fr/fr-FR.txt
@@ -8,6 +8,7 @@ signNonFixedL3=pour utiliser le portail
 signRandom=Aléatoire
 signDisconnected=Déconnecté
 signTerminalL2=À vendre
+signPortalOwner=Crée par :
 
 # Gate Actions
 gateDestroy=Portail détruit !
