--- a/src/main/resources/lang/nb/nb-NO.txt
+++ b/src/main/resources/lang/nb/nb-NO.txt
@@ -8,6 +8,7 @@ signNonFixedL3=for å bruke port
 signRandom=Tilfeldig
 signDisconnected=Koblet fra
 signTerminalL2=Til salgs
+signPortalOwner=Eid av:
 
 # Gate Actions
 gateDestroy=Port ødelagt!
