--- a/src/main/resources/lang/en-UD/en-UD.txt
+++ b/src/main/resources/lang/en-UD/en-UD.txt
@@ -8,7 +8,7 @@ signNonFixedL3=ǝʇɐƃ ǝsn oʇ
 signRandom=ɯopuɐɹ
 signDisconnected=pǝʇɔǝuuoɔsᴉp
 signTerminalL2=ǝlɐS ɹoℲ
-signPortalOwner=:ʎq pǝʇɐǝɹƆ
+signPortalOwner=:ʎq pǝuʍO
 
 # Gate Actions
 gateDestroy=¡pǝʎoɹʇsǝp ǝʇɐפ
