--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -45,6 +45,7 @@ tpSuccess=POOFD!
 tpDestInvalid=BAD DESTINASHUN!
 tpEmptyNet=DESTINASHUN LIST EMPTY!
 tpOccupied=SOME1 ELSE IZ NOW USIN DIS PORTAL; TRY AGAIN L8TR!
+tpPastBorder=DESTINASHUN IZ OUTSIDE OV WORLDBORDR!
 
 # Access
 conflictPerms=ACCES DENID!
