--- a/src/main/resources/lang/fr/fr-FR.txt
+++ b/src/main/resources/lang/fr/fr-FR.txt
@@ -56,6 +56,20 @@ ecoDeduct=Déduction de %cost%.
 ecoObtain=Obtenu %cost% par StarGate %portal% !
 ecoInsolvent=Fonds insuffisants !
 
+#Terminology
+gate=Portail
+network=Réseau
+interserver=Inter-serveur
+default=Défaut
+terminal=Terminal
+personal=Personnel
+
+#Temporary
+unimplementedInterserver=Les portails inter-serveurs sont encore en cours de développement et n'ont été que partiellement implémentées.
+unimplementedIConflict=Le réseau %interserverNetName% a été temporairement séparé du réseau %netName% mais sera bientôt fusionné.
+unimplementedIGeneral=Le réseau %interserverNetName% sera migré vers le réseau %netName% dans un avenir proche.
+unimplementedFlag=Les option %flags% n'ont pas encore été implémentés.
+
 #Admin
 adminReload=Configuration rechargée !
 adminInfo=Version %version% en cours d'exécution. Journal des mise a jour: https://git.io/JD4Qo
