--- a/src/main/resources/lang/tr/tr-TR.txt
+++ b/src/main/resources/lang/tr/tr-TR.txt
@@ -50,6 +50,10 @@ ecoDeduct=Düşürülmüş %cost%.
 ecoObtain=Stargarte %portal% 'ından %cost% elde edildi!
 ecoInsolvent=Yetersiz Bakiye!
 
+#Terminology
+
+#Temporary
+
 #Admin
 adminReload=Yapılandırma yeniden yüklendi!
 adminInfo=Şu anki versiyon %version%. Geliştirici Günlüğü: https://git.io/JD4Qo
