--- a/src/main/resources/lang/en-GB/en-GB.txt
+++ b/src/main/resources/lang/en-GB/en-GB.txt
@@ -63,11 +63,11 @@ interserver=Interserver
 default=Default
 terminal=Terminal
 personal=Personal
+custom=Custom
 
 #Temporary
 unimplementedInterserver=Interserver gates are still in active development and have only partially been implemented.
 unimplementedIConflict=The %interserverNetName% network has been temporarily separated from the %netName% network, but will soon be merged.
-unimplementedIGeneral=The %interserverNetName% network will be migrated to the %netName% network in the near future.
 unimplementedFlag=The %flags% flags have not yet been implemented.
 
 #Admin
