--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -63,11 +63,11 @@ interserver=INTERSERVER
 default=DEFAULT
 terminal=TERMINAL
 personal=UR NETWORK
+custom=CUSTOM
 
 #Temporary
 unimplementedInterserver=INTERSERVR GATEZ R STILL IN ACTIV DEVELOPMENT AN HAS ONLY PARTIALLY BEEN IMPLEMENTD.
 unimplementedIConflict=TEH %interserverNetName% NETWORK HAS BEEN TEMPORARILY SEPARATD FRUM TEH %netName% NETWORK, BUT WILL SOON BE MERGD.
-unimplementedIGeneral=TEH %interserverNetName% NETWORK WILL BE MIGRATD 2 TEH %netName% NETWORK IN DA NEAR FUCHUR.
 unimplementedFlag=TEH %flags% FLAGS HAS NOT YET BEEN IMPLEMENTD.
 
 #Admin
