--- a/src/main/resources/lang/nl/nl-NL.txt
+++ b/src/main/resources/lang/nl/nl-NL.txt
@@ -8,6 +8,7 @@ signNonFixedL3=Poort gebruiken
 signRandom=Willekeurig
 signDisconnected=Verbinding verbroken
 signTerminalL2=Te Koop
+signPortalOwner=Eigendom van:
 
 # Gate Actions
 gateDestroy=Poort vernietigd!
@@ -15,6 +16,7 @@ gateCreateSpecified=Poort gemaakt op %network% netwerk!
 gateCreatePersonal=Poort aanmaken op een persoonlijk netwerk.
 gateTerminalSold=Gate %gateName% gekocht in %terminalName% voor %cost%.
 gateTerminalSale=Gate %gateName% te koop aangeboden in %terminalName% voor %cost%.
+gateCreateFallback=Kan je poort niet aanmaken op het %network% netwerk; probeer in plaats daarvan je persoonlijke netwerk!
 
 # Gate Construction Problems
 faultNetwork=Je hebt geen toegang tot dat netwerk!
@@ -25,6 +27,8 @@ faultFull=Er is geen ruimte op dat netwerk!
 faultWorldDeny=Je hebt geen toegang tot wereld %world%!
 faultConflict=Deze poort conflicteert met een bestaande poort.
 faultFlag=Je hebt geen toestemming om de %flags% markering te gebruiken; je portaal is aangemaakt zonder deze markering.
+faultControls=Het ontwerp van deze poort heeft te weinig controleblokken om aan de geselecteerde vlaggen te voldoen!
+faultAddon=Een toevoeging heeft je verhinderd om dat te doen!
 
 # Bungee Problems
 bungeePerms=Je hebt geen toestemming om bungee poorten te maken!
@@ -40,6 +44,8 @@ bungeeTargetOffline=De proxy is momenteel niet beschikbaar; bungee-portalen zijn
 tpSuccess=Geteleporteerd!
 tpDestInvalid=Ongeldige bestemming!
 tpEmptyNet=Bestemming lijst is leeg!
+tpOccupied=Een andere speler gebruikt momenteel dit portaal; probeer het over enkele ogenblikken opnieuw!
+tpPastBorder=Bestemming is buiten de wereldgrens!
 
 # Access
 conflictPerms=Toegang geweigerd
@@ -51,8 +57,17 @@ ecoObtain=%cost% ontvangen van StarGate %portal%!
 ecoInsolvent=Onvoldoende saldo!
 
 #Terminology
+gate=Poort
+network=Netwerk
+interserver=Interserver
+default=Standaard
+terminal=Terminal
+personal=Persoonlijk
 
 #Temporary
+unimplementedInterserver=Interserver poorten zijn nog in ontwikkeling en zijn nog maar gedeeltelijk geïmplementeerd.
+unimplementedIConflict=Het %interserverNetName% netwerk is tijdelijk gescheiden van het %netName% netwerk, maar zal binnenkort worden samengevoegd.
+unimplementedFlag=De %flags% markeringen zijn nog niet geïmplementeerd.
 
 #Admin
 adminReload=Configuratie herladen!
