--- a/src/main/resources/lang/en-CA/en-CA.txt
+++ b/src/main/resources/lang/en-CA/en-CA.txt
@@ -67,7 +67,7 @@ custom=Custom
 
 #Temporary
 unimplementedInterserver=Interserver gates are still in active development and have only partially been implemented.
-unimplementedIConflict=The %interserverNetName% network has been temporarily separated from the %netName% network, but will soon be merged.
+unimplementedIConflict=The %name% %type1% network has been temporarily separated from the %name% %type2% network, but will soon be merged.
 unimplementedFlag=The %flags% flags have not yet been implemented.
 
 #Admin
