--- a/src/main/resources/lang/fr/fr-FR.txt
+++ b/src/main/resources/lang/fr/fr-FR.txt
@@ -66,7 +66,7 @@ personal=Personnel
 
 #Temporary
 unimplementedInterserver=Les portails inter-serveurs sont encore en cours de développement et n'ont été que partiellement implémentées.
-unimplementedIConflict=Le réseau %interserverNetName% a été temporairement séparé du réseau %netName% mais sera bientôt fusionné.
+unimplementedIConflict=Le réseau %name% %type1% a été temporairement séparé du réseau %name% %type2% mais sera bientôt fusionné.
 unimplementedFlag=Les option %flags% n'ont pas encore été implémentés.
 
 #Admin
