--- a/src/main/resources/lang/lol/lol-US.txt
+++ b/src/main/resources/lang/lol/lol-US.txt
@@ -67,7 +67,7 @@ custom=CUSTOM
 
 #Temporary
 unimplementedInterserver=INTERSERVR GATEZ R STILL IN ACTIV DEVELOPMENT AN HAS ONLY PARTIALLY BEEN IMPLEMENTD.
-unimplementedIConflict=TEH %interserverNetName% NETWORK HAS BEEN TEMPORARILY SEPARATD FRUM TEH %netName% NETWORK, BUT WILL SOON BE MERGD.
+unimplementedIConflict=TEH %name% %type1% NETWORK HAS BEEN TEMPORARILY SEPARATD FRUM TEH %name% %type2% NETWORK, BUT WILL SOON BE MERGD.
 unimplementedFlag=TEH %flags% FLAGS HAS NOT YET BEEN IMPLEMENTD.
 
 #Admin
